; ModuleID = '/home/carl/AnghaBench/reactos/base/setup/lib/utils/extr_inicache.c_IniCacheGetKey.c'
source_filename = "/home/carl/AnghaBench/reactos/base/setup/lib/utils/extr_inicache.c_IniCacheGetKey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }

@.str = private unnamed_addr constant [19 x i8] c"Invalid parameter\0A\00", align 1
@STATUS_INVALID_PARAMETER = common dso_local global i32 0, align 4
@STATUS_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @IniCacheGetKey(i32* %0, i32* %1, i32** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32**, align 8
  %8 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32** %2, i32*** %7, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = icmp eq i32* %9, null
  br i1 %10, label %17, label %11

11:                                               ; preds = %3
  %12 = load i32*, i32** %6, align 8
  %13 = icmp eq i32* %12, null
  br i1 %13, label %17, label %14

14:                                               ; preds = %11
  %15 = load i32**, i32*** %7, align 8
  %16 = icmp eq i32** %15, null
  br i1 %16, label %17, label %20

17:                                               ; preds = %14, %11, %3
  %18 = call i32 @DPRINT(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  %19 = load i32, i32* @STATUS_INVALID_PARAMETER, align 4
  store i32 %19, i32* %4, align 4
  br label %37

20:                                               ; preds = %14
  %21 = load i32**, i32*** %7, align 8
  store i32* null, i32** %21, align 8
  %22 = load i32*, i32** %5, align 8
  %23 = load i32*, i32** %6, align 8
  %24 = load i32*, i32** %6, align 8
  %25 = call i32 @wcslen(i32* %24)
  %26 = call %struct.TYPE_3__* @IniCacheFindKey(i32* %22, i32* %23, i32 %25)
  store %struct.TYPE_3__* %26, %struct.TYPE_3__** %8, align 8
  %27 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %28 = icmp eq %struct.TYPE_3__* %27, null
  br i1 %28, label %29, label %31

29:                                               ; preds = %20
  %30 = load i32, i32* @STATUS_INVALID_PARAMETER, align 4
  store i32 %30, i32* %4, align 4
  br label %37

31:                                               ; preds = %20
  %32 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %33 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %32, i32 0, i32 0
  %34 = load i32*, i32** %33, align 8
  %35 = load i32**, i32*** %7, align 8
  store i32* %34, i32** %35, align 8
  %36 = load i32, i32* @STATUS_SUCCESS, align 4
  store i32 %36, i32* %4, align 4
  br label %37

37:                                               ; preds = %31, %29, %17
  %38 = load i32, i32* %4, align 4
  ret i32 %38
}

declare dso_local i32 @DPRINT(i8*) #1

declare dso_local %struct.TYPE_3__* @IniCacheFindKey(i32*, i32*, i32) #1

declare dso_local i32 @wcslen(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
